# VkApp

./: CMakeLists.txt  Makefile
include/: CVulkanBase.hpp
src/: CVulkanBase.cpp  main.cpp
